force-app/main/default/objects/Accounting_Code__c/Accounting_Code__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_AccountingcodeOnlineHelp</customHelpPage>
    <description>Accounting Code</description>
    <label>会計コード</label>
    <nameField>
        <label>Accounting Code</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>