force-app/main/default/objects/Accounting_Code__c/fields/Accounting_Name__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Name__c</fullName>
    <inlineHelpText>Enter the name title of Accounting Code.</inlineHelpText>
    <label>ACCOUNTING NAME</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>