force-app/main/default/objects/Accounting_Code__c/fields/BalanceType__c.field-meta.xml
<CustomField>
    <fullName>BalanceType__c</fullName>
    <label>BALANCE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BalanceType</valueSetName>
    </valueSet>
</CustomField>