force-app/main/default/objects/Accounting_Code__c/fields/Description_1__c.field-meta.xml
<CustomField>
    <fullName>Description_1__c</fullName>
    <label>DESCRIPTION-1</label>
    <type>TextArea</type>
</CustomField>