force-app/main/default/objects/Accounting_Code__c/listViews/Account_Team_Accounting_Code.listView-meta.xml
<ListView>
    <fullName>Account_Team_Accounting_Code</fullName>
    <filterScope>Queue</filterScope>
    <label>Account Team</label>
    <queue>Account_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>