force-app/main/default/objects/Accounting_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Accounting_Name__c</columns>
    <columns>ParentAccountingCode__c</columns>
    <columns>NAME</columns>
    <columns>ACCOUNTING_SUB_CODE__c</columns>
    <columns>Description_1__c</columns>
    <columns>Description_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>